<resources>
    <string name="app_name">Evased</string>
    <string name="new_task">New Task</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_an_account_yet_sign_up_here">Don\'t have an account yet? Sign Up here.</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sports">Sports</string>
    <string name="music">Music</string>
    <string name="art">Art</string>
    <string name="nav_open">Open</string>
    <string name="nav_close">Close</string>
    <string name="lorem_ipsum">lorem ipsum</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="my_events">My events</string>
    <string name="my_timeline">My timeline</string>
    <string name="my_messages">My messages</string>
    <string name="my_account">My Account</string>
    <string name="search_users">Search users</string>
    <string name="map">Map</string>
    <string name="name_task">Name Task</string>
    <string name="date">DATE</string>
    <string name="timeline">TIMELINE</string>
    <string name="messages">Messages</string>
    <string name="rate_this_event">★ RATE THIS EVENT ★</string>
    <string name="event">EVENT</string>
    <string name="attend">Attend</string>
    <string name="name">Name</string>
    <string name="title_activity_friend_request">friendRequest</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>