<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/my_account"
        android:tint="@color/white"/>

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_baseline_event_24"
        android:title="@string/my_events" />

    <item
        android:id="@+id/nav_timeline"
        android:icon="@drawable/ic_baseline_timeline_24"
        android:title="@string/my_timeline"/>

    <item
        android:id="@+id/nav_messages"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/my_messages"/>

    <item
        android:id="@+id/nav_search_users"
        android:icon="@drawable/ic_baseline_person_search_24"
        android:title="@string/search_users"
        />

    <item
        android:id="@+id/nav_map"
        android:icon="@drawable/ic_baseline_map_24"
        android:title="@string/map"
       />

    </group>
</menu>