<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_act"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="225dp"
        android:src="@drawable/aaaaaalogo" />

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="80dp"
        android:layout_marginTop="35dp"
        android:hint="@string/username"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="178dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_marginStart="80dp"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/noAccountBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="0dp"
        android:text="@string/don_t_have_an_account_yet_sign_up_here"
        android:textSize="12sp"
        android:textColor="@color/black"
        android:background="@android:color/transparent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginTop="50dp"
        android:text="@string/sign_in"
        android:textSize="23sp"
        tools:ignore="MissingConstraints" />

</LinearLayout>
<!--<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:gravity="center"
            android:text="Evased"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_map"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="200dp"
            android:layout_marginStart="200dp">

        </Button>

        <Button
            android:id="@+id/button_test_events_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Button" />
    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/black"
        app:itemTextColor="@color/white"
        app:headerLayout="@layout/lateral_menu_header"
        app:menu="@menu/lateral_menu" />

</androidx.drawerlayout.widget.DrawerLayout>
-->